# stm32-cmake

./: README.md
cmake/: FindCMSIS.cmake  FindFreeRTOS.cmake  FindLwIP.cmake  stm32_gcc.cmake
cmake/stm32/: common.cmake  devices.cmake  utilities.cmake
examples/freertos/: CMakeLists.txt
examples/freertos/h743zi/: CMakeLists.txt
